--- a/lk9.html
+++ b/lk9.html
@@ -125,14 +125,133 @@
               <div class="middle_part">
                 <table class="otch_p bordered">
                   <thead>
-                  <tr class="head_t">
-                    <th>ID товара</th>
-                    <th>Артикул</th>
-                    <th>Группа товаров</th>
-                    <th style="width: 20%">Наименование</th>
-                    <th style="width: 7%">Остаток на начало периода</th>
-                    <th>Продано дистрибьюторам</th>
-                    <th>Возвраты от дистрибьюторов</th>
+                    <tr class="head_t">
+                    <th style="width: 9%">
+                      <div>
+                        <span>ID товара</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Артикул</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Группа товаров</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Наименование</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Остаток на начало периода</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Продано дистрибьюторам</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Возвраты от дистрибьюторов</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Отгружено нижестоящим</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Оприходованно от вышестоящих</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                    <th>
+                      <div>
+                        <span>Пополнение</span>
+                      </div>
+                      <div class="table_array">
+                        <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                        <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                      </div>
+                    </th>
+                      <th>
+                        <div>
+                          <span>Списание</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Обороты</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Остаток (конец периода)</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Остаток (реальный)</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
                   </tr>
                   </thead>
                   <tbody>
@@ -144,6 +263,13 @@
                       <td>0</td>
                       <td>234</td>
                       <td>133</td>
+                      <td>133</td>
+                      <td>45</td>
+                      <td>433</td>
+                      <td>12</td>
+                      <td>12</td>
+                      <td>12</td>
+                      <td>12</td>
                     </tr>
                     <tr>
                       <td>2334</td>
@@ -153,6 +279,13 @@
                       <td>0</td>
                       <td>234</td>
                       <td>133</td>
+                      <td>133</td>
+                      <td>45</td>
+                      <td>433</td>
+                      <td>12</td>
+                      <td>12</td>
+                      <td>12</td>
+                      <td>12</td>
                     </tr>
                     <tr>
                       <td>2334</td>
@@ -162,6 +295,13 @@
                       <td>0</td>
                       <td>234</td>
                       <td>133</td>
+                      <td>133</td>
+                      <td>45</td>
+                      <td>433</td>
+                      <td>12</td>
+                      <td>12</td>
+                      <td>12</td>
+                      <td>12</td>
                     </tr>
                     <tr>
                       <td>2334</td>
@@ -171,6 +311,13 @@
                       <td>0</td>
                       <td>234</td>
                       <td>133</td>
+                      <td>133</td>
+                      <td>45</td>
+                      <td>433</td>
+                      <td>12</td>
+                      <td>12</td>
+                      <td>12</td>
+                      <td>12</td>
                     </tr>
                   </tbody>
                 </table>
@@ -308,7 +455,9 @@
       </div>
       <div class="footer">
         <div class="footer_line">
-          <div class="title_line">Фильтры поиска</div>
+          <div class="title_line">
+            <div class="title_line_t search">Фильтры поиска</div>
+          </div>
           <div class="modal_line">
             <a href="#" class="closebig"></a>
             <h3>Фильтры поиска</h3>
@@ -317,6 +466,7 @@
                 <div class="label_in">
                   <input type="text" class="tinput" required />
                   <label class="tlabel" for>Поиск по группе товаров</label>
+                  <span class="array_down"></span>
                 </div>
               </div>
               <div class="r_p" style="float: right; padding-right: 0">
